0.10.0 (2015-??-??)
===================

Bug Handling
------------


0.9.1 (2015-??-??)
==================

Features
--------

* Added configurable max_message_size to heka-cat.

Bug Handling
------------

* Fixed SplitterRunner buffer readPos so it only increments when a read call
  doesn't return an error (#1367).

0.9.0 (2015-02-25)
==================

Backwards Incompatibilities
---------------------------

* Major overhaul of Heka's configuration loading code. This doesn't impact
  most plugins, it's only a breaking change for plugins that happen to
  instantiate and manage the lifecycles of other embedded plugins, e.g.
  MultiDecoder, ProcessDirectoryInput, SandboxManagerFilter.

* All inputs now support `decoder`, `synchronous_decode`, and
  `send_decode_failures` config options, automatically extracted by Heka's
  config system.

* InputRunner now handles message decoding and delivery to the router,
  according to the specifications of the input's configuration. This is
  accomplished either directly via the `Deliver` method or, in cases where
  decoding might need to happen in separate goroutines, through `Deliverer`
  objects available from the `NewDeliverer` method.

* Hekad and all clients started using stdout for informational messages and
  stderr for error messages.

* Stats Accum Input treats gauge inputs as float64 rather than int64 to match
  statsd spec and other statsd implementations (#850).

* Introduction of Splitter plugins, accompanied by major changes to how input
  plugins work to support the use of Splitter plugins. (#424)

* TcpInput and UdpInput now set a non-protobuf encoded message's Type field to
  the configured input plugin name instead of the hard-coded string
  "NetworkInput".

Bug Handling
------------

* Fix the shutdown hang caused by a Filter/Output plugin failure (#1324).

* Fix the RPM dependency errors on Centos7 (#1311).

* Don't output empty messages when use_framing = true (#1326).
